@@ -704,29 +704,43 @@ flags:\n\r\
 BEHAVIOR_ITEMMENDER=\
 Behavior   : ItemMender\n\r\
 Targets    : MOBs\n\r\
-Parameters : \n\r\
-Example    : \n\r\
+Parameters : (COST=[FORMULA])\n\r\
+Example    : COST=100+@x1\n\r\
 Description: \n\r\
 For a price, this mob will repair damaged weapons and armor.  \
-The mender will NOT work for Archons, however.
+The mender will NOT work for Archons, however. \
+\n\r\
+The optional COST parameter can be used to change the pricing \
+formula.  Variables are: @x1=level, @x2=value, @x3=condition(0-100), \
+@x4=magical=1.0/non-magical=0.0. 
 
 BEHAVIOR_ITEMREFITTER=\
 Behavior   : ItemRefitter\n\r\
 Targets    : MOBs\n\r\
-Parameters : \n\r\
-Example    : \n\r\
+Parameters : (COST=[FORMULA])\n\r\
+Example    : COST=100+@x1\n\r\
 Description: \n\r\
 For a price, this mob will resize armor to fit the mob.  \
-The mender will NOT work for Archons, however.
+The mender will NOT work for Archons, however.\
+\n\r\
+The optional COST parameter can be used to change the pricing \
+formula.  Variables are: @x1=level, @x2=value, @x3=condition(0-100), \
+@x4=magical=1.0/non-magical=0.0. 
+
 
 BEHAVIOR_ITEMIDENTIFIER=\
 Behavior   : ItemIdentifier\n\r\
 Targets    : MOBs\n\r\
-Parameters : \n\r\
-Example    : \n\r\
+Parameters : (COST=[FORMULA])\n\r\
+Example    : COST=100+@x1\n\r\
 Description: \n\r\
 For a price, this mob will identify items.  \
-They will NOT work for Archons, however.
+They will NOT work for Archons, however.\
+\n\r\
+The optional COST parameter can be used to change the pricing \
+formula.  Variables are: @x1=level, @x2=value, @x3=condition(0-100), \
+@x4=magical=1.0/non-magical=0.0. 
+
 
 BEHAVIOR_MAGENESS=\
 Behavior   : Mageness\n\r\
