@@ -2205,3 +2205,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 9. Players can now get HELP on deities by name.
 10.Rhino (Javascript library) upgraded to 1.7R2
 11.Several new Oracle Prayers added for sensing the skills of others
+12.Behaviors ItemRefitter,ItemMender,ItemIdentifier have COST parameter now.
